--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nikhil का Resume</title>
+  <title>Nikhil Resume</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -102,7 +102,7 @@
   <div class="container">
     <div class="card">
       <header>
-        <img class="avatar" src="your-photo.jpg" alt="आपकी फोटो" />
+        <img class="avatar" src="WhatsApp Image 2025-09-02 at 9.25.29 PM.jpeg" alt="आपकी फोटो" />
         <div>
           <h1 class="name">Nikhil Didore</h1>
           <div class="role">Software Developer</div>
@@ -187,3 +187,4 @@
   </script>
 </body>
 </html>
+
